--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="row" style="height: 100vh; width: 100vw;">
-  <div class="col-2">
+  <div class="col-sm-3 col-xl-2">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="col-10">
+  <div class="col-sm-9 col-xl-10">
     <app-tasks-list></app-tasks-list>
   </div>
 </div>
