--- a/src/app/sidebar/user-info-box/user-info-box.component.html
+++ b/src/app/sidebar/user-info-box/user-info-box.component.html
@@ -1,1 +1,15 @@
-<p>user-info-box works!</p>
+<div class="container p-2 user-info-box">
+  <div class="row">
+    <div class="col-2">
+      <img src="{{ user.image }}" style="max-height: 30px; border-radius: 50%;">
+    </div>
+    <div class="col-8">
+      <div class="name">{{ user.name }}</div>
+      <div class="email">{{ user.email }}</div>
+    </div>
+    <div class="col-2 mt-1">
+      <a href="#" class="link-secondary bi bi-box-arrow-right">
+      </a>
+    </div>
+  </div>
+</div>
