Sidebar redo and task list layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
     <app-sidebar></app-sidebar>
   </div>
   <div class="col-sm-9 col-xl-10">
+    <app-new-task></app-new-task>
+    <app-tasks-list-bar></app-tasks-list-bar>
     <app-tasks-list></app-tasks-list>
   </div>
 </div>
