--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex flex-column mb-3 sidebar-div">
+<nav class="nav flex-column sidebar-div">
   <div class="logo-text ms-sm-3 ms-xl-4 mt-5 mb-5"><span class="logo-text-one">TASK</span><span class="logo-text-two">IT</span></div>
   <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mb-auto">Task List</button>
   <app-user-info-box></app-user-info-box>
-</div>
+</nav>
