--- a/src/app/sidebar/user-info-box/user-info-box.component.html
+++ b/src/app/sidebar/user-info-box/user-info-box.component.html
@@ -3,12 +3,15 @@
     <div class="col-2">
       <img src="{{ user.image }}" style="max-height: 30px; border-radius: 50%;">
     </div>
-    <div class="col-8">
+    <div class="col-7">
       <div class="name">{{ user.name }}</div>
       <div class="email">{{ user.email }}</div>
     </div>
-    <div class="col-2 mt-1">
-      <a href="#" class="link-secondary bi bi-box-arrow-right">
+    <div class="col-3 mt-1">
+      <a href="#">
+        <span class="material-symbols-outlined ms-2 logout">
+          logout
+        </span>
       </a>
     </div>
   </div>
