--- a/src/app/tasks-list/tasks-list.component.css
+++ b/src/app/tasks-list/tasks-list.component.css
@@ -1,34 +1,24 @@
-.top-bar {
-  width: 100%;
+.table {
+  border: 1px solid darkgrey;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: white;
 }
 
-.select-box {
-  color: darkgrey;
-  height: 25px;
-  width: 100px;
-}
-
-.option-text {
-  color: black;
-}
-
-.btn-success {
-  font-size: 13px;
-  height: 33px;
-  width: 150px;
-  background-color: limegreen;
+th, td {
   border: none;
 }
 
-.task-table {
-  border: 1px solid darkgrey;
-  border-radius: 10px;
+.low {
+  color: limegreen;
 }
 
-.task-heading {
-  color:darkgrey
+.medium {
+  color: gold;
 }
 
-.task-row {
-  border-bottom: 1px solid darkgrey;
+.high {
+  color: crimson;
 }
