Starting New Task popup

--- a/src/app/tasks-list/tasks-list-bar/tasks-list-bar.component.html
+++ b/src/app/tasks-list/tasks-list-bar/tasks-list-bar.component.html
@@ -2,20 +2,6 @@
   <h1 class="mb-4" >Task List</h1>
   <div class="d-flex flex-row mb-3 top-bar">
     <label class="me-2 mt-2" style="font-weight: bold;">Filters:</label>
-    <!-- <select class="select-box me-2 mt-2">
-      <option class="text-center">Status</option>
-      <option class="option-text">To Do</option>
-    </select>
-    <select class="select-box me-2 mt-2">
-      <option class="text-center">Date</option>
-      <option class="option-text">10/02/23</option>
-    </select>
-    <select class="select-box mt-2">
-      <option class="text-center">Priority</option>
-      <option class="option-text">Low</option>
-      <option class="option-text">Medium</option>
-      <option class="option-text">High</option>
-    </select> -->
     <div class="dropdown me-2">
       <button class="btn btn-default btn-sm dropdown-toggle mt-1 select-box" type="button" data-bs-toggle="dropdown">Due Date</button>
       <ul class="dropdown-menu">
@@ -37,6 +23,7 @@
       </ul>
     </div>
     <span class="flex-grow-1"></span>
-    <button class="btn btn-success btn-sm new-task-btn mt-1">Add New Task</button>
+    <button class="btn btn-success btn-sm new-task-btn mt-1"
+    >Add New Task</button>
   </div>
 </div>
