--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="newTaskModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="newTaskModalLabel">Modal title</h1>
