Futzing with the logout icon

--- a/src/app/sidebar/user-info-box/user-info-box.component.html
+++ b/src/app/sidebar/user-info-box/user-info-box.component.html
@@ -7,10 +7,10 @@
       <div class="name">{{ user.name }}</div>
       <div class="email">{{ user.email }}</div>
     </div>
-    <div class="col-3 mt-1">
+    <div class="col-3 mt-2">
       <a href="#">
-        <span class="material-symbols-outlined ms-2 logout">
-          logout
+        <span class="bi material-symbols-outlined ms-sm-2 ms-xl-4 logout">
+          move_item
         </span>
       </a>
     </div>
