Added backgound-color to table heading

--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -5,11 +5,11 @@
     <table class="table table-bordered table-hover rounded-3 text-center">
       <thead>
         <tr>
-          <th scope="col">Task</th>
-          <th scope="col">Due Date</th>
-          <th scope="col">Priority</th>
-          <th scope="col">Status</th>
-          <th scope="col">Actions</th>
+          <th class="header" scope="col">Task</th>
+          <th class="header" scope="col">Due Date</th>
+          <th class="header" scope="col">Priority</th>
+          <th class="header" scope="col">Status</th>
+          <th class="header" scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
