--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -2,15 +2,50 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="newTaskModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="newTaskModalLabel">Add New Task</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <form class="row g-3" id="taskForm">
+          <div class="col-12">
+            <label for="inputTaskName" class="form-label">Task</label>
+            <input type="text" class="form-control" id="inputTaskName" placeholder="Name the task">
+          </div>
+          <div class="col-12">
+            <label for="inputDetails" class="form-label">Details</label>
+            <textarea type="text" class="form-control" id="inputDetails" placeholder="Describe the task" style="height: 150px; resize: none;"></textarea>
+          </div>
+          <div class="col-md-6">
+            <label for="inputDueDate" class="form-label">Due Date</label>
+            <input type="text" class="form-control" id="inputDueDate">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPriority" class="form-label">Priority</label>
+            <div>
+              <select class="form-select" aria-label="Priority" id="inputPriority">
+                <option selected value="low">Low</option>
+                <option value="med">Medium</option>
+                <option value="high">High</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-md-6">
+          </div>
+          <div class="col-md-6">
+            <label for="inputStatus" class="form-label">Status</label>
+            <div>
+              <select class="form-select" aria-label="Status" id="inputStatus">
+                <option selected value="to-do">To Do</option>
+                <option value="in-progress">In Progress</option>
+                <option value="done">Done</option>
+              </select>
+            </div>
+          </div>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addTask()">Add Task</button>
       </div>
     </div>
   </div>
