Edit and View modals popping up

--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -23,9 +23,9 @@
             <label for="inputPriority" class="form-label">Priority</label>
             <div>
               <select class="form-select" aria-label="Priority" id="inputPriority">
-                <option selected value="low">Low</option>
-                <option value="med">Medium</option>
-                <option value="high">High</option>
+                <option selected value="Low">Low</option>
+                <option value="Medium">Medium</option>
+                <option value="High">High</option>
               </select>
             </div>
           </div>
@@ -35,9 +35,9 @@
             <label for="inputStatus" class="form-label">Status</label>
             <div>
               <select class="form-select" aria-label="Status" id="inputStatus">
-                <option selected value="to-do">To Do</option>
-                <option value="in-progress">In Progress</option>
-                <option value="done">Done</option>
+                <option selected value="To Do">To Do</option>
+                <option value="In Progress">In Progress</option>
+                <option value="Done">Done</option>
               </select>
             </div>
           </div>
