Set character limit on task name and details

--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -9,11 +9,11 @@
         <form class="row g-3" id="taskForm">
           <div class="col-12">
             <label for="inputTaskName" class="form-label">Task</label>
-            <input type="text" class="form-control" id="inputTaskName" placeholder="Name the task">
+            <input type="text" class="form-control" id="inputTaskName" maxlength="25" placeholder="Name the task">
           </div>
           <div class="col-12">
             <label for="inputDetails" class="form-label">Details</label>
-            <textarea type="text" class="form-control" id="inputDetails" placeholder="Describe the task" style="height: 150px; resize: none;"></textarea>
+            <textarea type="text" class="form-control" id="inputDetails" maxlength="400" placeholder="Describe the task" style="height: 160px; resize: none;"></textarea>
           </div>
           <div class="col-md-6">
             <label for="inputDueDate" class="form-label">Due Date</label>
