--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -45,7 +45,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="resetForm()">Close</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addTask()">Add Task</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="newTask()">Add Task</button>
       </div>
     </div>
   </div>
