--- a/src/app/tasks-list/tasks-list-bar/tasks-list-bar.component.html
+++ b/src/app/tasks-list/tasks-list-bar/tasks-list-bar.component.html
@@ -24,6 +24,6 @@
     </div>
     <span class="flex-grow-1"></span>
     <button class="btn btn-success btn-sm new-task-btn mt-1"
-    (click)="onNewTask(newTask = !newTask)">Add New Task</button>
+    (click)="onNewTask()">Add New Task</button>
   </div>
 </div>
