Futzing with a datepicker

--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -17,7 +17,8 @@
           </div>
           <div class="col-md-6">
             <label for="inputNewDueDate" class="form-label">Due Date</label>
-            <input type="text" class="form-control" id="inputNewDueDate">
+            <!-- <input type="text" class="form-control" id="inputNewDueDate"> -->
+            <div><input type="date" class="form-control" id="inputNewDueDate"></div>
           </div>
           <div class="col-md-6">
             <label for="inputNewPriority" class="form-label">Priority</label>
