--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -1,27 +1,25 @@
 <div class="modal fade" id="newTaskModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="newTaskModalLabel">Add New Task</h1>
+      <div class="d-flex justify-content-end btn-close-div">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="resetForm()"></button>
       </div>
       <div class="modal-body">
         <form class="row g-3" id="newTaskForm">
-          <div class="col-12">
+          <h1 class="modal-title fs-5" id="newTaskModalLabel">Add a New Task</h1>
+          <div class="col-8">
             <label for="inputNewTaskName" class="form-label">Task</label>
             <input type="text" class="form-control" id="inputNewTaskName" maxlength="25" placeholder="Name the task">
-          </div>
-          <div class="col-12">
-            <label for="inputNewDetails" class="form-label">Details</label>
+            <label for="inputNewDetails" class="form-label mt-3">Details</label>
             <textarea type="text" class="form-control" id="inputNewDetails" maxlength="250" placeholder="Describe the task" style="height: 160px; resize: none;"></textarea>
           </div>
-          <div class="col-md-6">
+          <div class="col-4">
             <label for="inputNewDueDate" class="form-label">Due Date</label>
             <!-- <input type="text" class="form-control" id="inputNewDueDate"> -->
-            <div><input type="date" class="form-control" id="inputNewDueDate"></div>
-          </div>
-          <div class="col-md-6">
-            <label for="inputNewPriority" class="form-label">Priority</label>
+            <div>
+              <input type="date" class="form-control" id="inputNewDueDate">
+            </div>
+            <label for="inputNewPriority" class="form-label mt-2">Priority</label>
             <div>
               <select class="form-select" aria-label="Priority" id="inputNewPriority">
                 <option selected value="Low">Low</option>
@@ -29,11 +27,7 @@
                 <option value="High">High</option>
               </select>
             </div>
-          </div>
-          <div class="col-md-6">
-          </div>
-          <div class="col-md-6">
-            <label for="inputNewStatus" class="form-label">Status</label>
+            <label for="inputNewStatus" class="form-label mt-2">Status</label>
             <div>
               <select class="form-select" aria-label="Status" id="inputNewStatus">
                 <option selected value="To Do">To Do</option>
@@ -41,12 +35,12 @@
                 <option value="Done">Done</option>
               </select>
             </div>
+            <div class="d-flex justify-content-between mt-3 pb-4">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="resetForm()">Cancel</button>
+              <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="newTask()">Create</button>
+            </div>
           </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="resetForm()">Close</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="newTask()">Add Task</button>
       </div>
     </div>
   </div>
