--- a/src/app/tasks-list/tasks-list.component.css
+++ b/src/app/tasks-list/tasks-list.component.css
@@ -46,3 +46,19 @@ td:empty::after {
 .action:hover {
   color: darkgrey;
 }
+
+.btn-close-div {
+  margin-top: 12px;
+  margin-right: 12px;
+}
+
+.btn-close {
+  width: 5px;
+  height: 5px;
+}
+
+.dlt-btn {
+  width: 110px;
+  height: 35px;
+  font-size: 13px;
+}
