--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -18,4 +18,12 @@
   font-size: 14px;
   background-color: limegreen;
   border: none;
+  color: white;
+}
+
+.btn-success:hover {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 1px limegreen;
+  color: limegreen;
+  transition: background-color .3s, box-shadow .3s, color .3s;
 }
