--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,6 @@
 <nav class="nav flex-column sidebar-div">
   <div class="logo-text ms-sm-3 ms-xl-4 mt-5 mb-5"><span class="logo-text-one">TASK</span><span class="logo-text-two">IT</span></div>
-  <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mb-auto">Task List</button>
+  <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4">Task List</button>
+  <button class="btn btn-success ms-sm-3 ms-xl-4 me-sm-3 me-xl-4 mt-3 mb-auto">KanBan</button>
   <app-user-info-box></app-user-info-box>
 </nav>
