--- a/src/app/tasks-list/new-task/new-task.component.css
+++ b/src/app/tasks-list/new-task/new-task.component.css
@@ -57,4 +57,12 @@
 .btn-success {
   background-color: limegreen;
   border: none;
+  color: white;
+}
+
+.btn-success:hover {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 1px limegreen;
+  color: limegreen;
+  transition: background-color .3s, box-shadow .3s, color .3s;
 }
