--- a/src/app/tasks-list/tasks-list-bar/tasks-list-bar.component.css
+++ b/src/app/tasks-list/tasks-list-bar/tasks-list-bar.component.css
@@ -21,10 +21,17 @@
 
 .new-task-btn {
   font-size: 13px;
-  /* height: 33px; */
   width: 150px;
   background-color: limegreen;
   border: none;
+  color: white;
+}
+
+.new-task-btn:hover {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 1px limegreen;
+  color: limegreen;
+  transition: background-color .3s, box-shadow .3s, color .3s;
 }
 
 .low {
