Fixed bug with deleteIndex, set value for dueDate on New Task, jump to last page on add New Task

--- a/src/app/tasks-list/new-task/new-task.component.html
+++ b/src/app/tasks-list/new-task/new-task.component.html
@@ -17,7 +17,7 @@
             <label for="inputNewDueDate" class="form-label">Due Date</label>
             <!-- <input type="text" class="form-control" id="inputNewDueDate"> -->
             <div>
-              <input type="date" class="form-control" id="inputNewDueDate">
+              <input type="date" class="form-control" id="inputNewDueDate" value="{{ todaysDate }}">
             </div>
             <label for="inputNewPriority" class="form-label mt-2">Priority</label>
             <div>
