--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -11,7 +11,7 @@
       <div class="modal-body text-center mt-3">
         <p *ngIf="deleteIndex !== undefined"
         class="mb-4"
-        style="font-weight: bold; font-size: 28px;">Are you sure you want to delete task '{{ tasks[deleteIndex].title }}'?</p>
+        style="font-weight: bold; font-size: 28px;">Are you sure you want to delete task '{{ page[pageIndex].title }}'?</p>
         <div class="mb-5">
           <button type="button" class="btn btn-secondary dlt-btn me-4" data-bs-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-danger dlt-btn" data-bs-dismiss="modal" (click)="deleteTask(deleteIndex)">Delete</button>
