Laid out and started styling KanBan board

--- a/src/app/tasks-list/tasks-list.component.css
+++ b/src/app/tasks-list/tasks-list.component.css
@@ -28,7 +28,9 @@ td:empty::after {
 }
 
 .header {
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
+  border-bottom: 1px solid grey;
+  color: darkgrey;
 }
 
 .low {
