--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="row" style="height: 100vh; width: 100vw;">
   <div class="col-sm-3 col-xl-2">
-    <app-sidebar></app-sidebar>
+    <app-sidebar (pageToEmit)="changePage($event)"></app-sidebar>
   </div>
   <div class="col-sm-9 col-xl-10">
-    <app-tasks-list></app-tasks-list>
+    <app-tasks-list *ngIf="pageShow === 'task-list'"></app-tasks-list>
+    <app-kanban *ngIf="pageShow === 'kanban'"></app-kanban>
   </div>
 </div>
