Changed margin-top on task-card for KanBan

--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -4,7 +4,8 @@
     <div class="col-4">
       <h6>To Do</h6>
       <div class="container task-container">
-        <div class="container task-card mt-3">
+
+        <div class="container task-card">
           <div class="row">
             <div class="col-8 mt-2">
               <h5>Clean Out Garage</h5>
@@ -22,6 +23,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
     <div class="col-4">
